--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "AWAIS-MD",
-  "version": "3.0.0",
-  "description": "A WhatsApp Bot Created By AWAIS",
+  "version": "4.0.0",
+  "description": "A WHATSAPP BOT CREATED BY AWAISMD",
   "main": "index.js",
   "scripts": {
     "start": "pm2 start index.js --deep-monitoring --attach --name AWAIS-MD",
@@ -9,45 +9,51 @@
     "restart": "pm2 restart AWAIS-MD"
   },
   "dependencies": {
+    "@whiskeysockets/baileys": "6.7.18",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@dark-yasiya/yt-dl.js": "1.0.5",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "@mrnima/facebook-downloader": "1.0.0",
-    "@mrnima/tiktok-downloader": "1.0.0",
-    "@whiskeysockets/baileys": "6.7.16",
-    "api-dylux": "1.8.5",
+    "@vitalets/google-translate-api": "^9.2.0",
+    "@dark-yasiya/scrap":"1.0.1",    
+    "pino": "^7.0.5",
+    "pm2": "^6.0.5",
+    "util": "^0.12.4",
+    "express": "latest",
+    "moment-timezone": "^0.5.45",
     "axios": "^1.2.5",
-    "btch-downloader": "^2.2.9",
-    "cheerio": "^1.0.0-rc.12",
     "crypto-digest-sync": "^1.0.0",
     "crypto-js": "latest",
-    "express": "latest",
-    "ffmpeg": "^0.0.4",
     "file_size_url": "1.0.4",
+    "fs-extra": "^11.1.0",
+    "fs": "^0.0.1-security",
+    "ffmpeg": "^0.0.4",
     "file-type": "^16.5.3",
     "fluent-ffmpeg": "^2.1.2",
     "form-data": "^4.0.0",
-    "fs": "^0.0.1-security",
-    "fs-extra": "^11.1.0",
-    "adm-zip": "^0.5.16",
     "google-tts-api": "^2.0.2",
-    "megajs": "^1.1.0",
-    "mrnima-moviedl": "1.0.0",
-    "@dark-yasiya/scrap":"1.0.1",
-    "node-fetch": "^2.6.1",
     "path": "^0.12.7",
-    "pino": "^7.0.5",
-    "pm2": "^5.2.0",
+    "node-fetch": "^2.6.1",
+    "btch-downloader": "^2.2.9",
+    "megajs": "^1.1.0",
+    "pdfkit": "^0.14.0",
+    "wa_set_pkg": "1.0.5",
+    "jimp": "0.16.1",
+    "buffer": "6.0.3",
+    "wa-sticker-formatter": "^4.4.4",
+    "path": "^0.12.7",
+    "vm": "^0.1.0",
+    "adm-zip": "^0.5.16",
+    "puppeteer": "24.10.1",
+    "cheerio": "^1.0.0-rc.12",
+    "ruhend-scraper" : "8.0.3",
     "qrcode-terminal": "^0.12.0",
-    "ruhend-scraper": "8.0.3",
+    "yt-search":"2.11.1",
     "sequelize": "^6.37.5",
     "sqlite3": "^5.1.7",
-    "util": "^0.12.4",
     "vm": "^0.1.0",
-    "wa_set_pkg": "1.0.5",
-    "wa-sticker-formatter": "^4.4.4",
-    "wikipedia": "2.1.2",
-    "yt-search": "2.11.1"
+    "api-dylux":"1.8.5",
+    "@mrnima/tiktok-downloader":"1.0.0",
+    "@mrnima/facebook-downloader":"1.0.0",
+    "mrnima-moviedl":"1.0.0"
   }
-  }
-    
+}
