--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
+
 {
   "name": "AWAIS-MD-V3",
   "version": "4.0.0",
   "description": "A WHATSAPP BOT CREATED BY AWAISXD",
-  "main": "index.js",
+  "main": "start.js",
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name AWAIS-MD",
+    "start": "pm2 start start.js --deep-monitoring --attach --name AWAIS-MD",
     "stop": "pm2 stop AWAIS-MD",
     "restart": "pm2 restart AWAIS-MD"
   },
