--- a/app.json
+++ b/app.json
@@ -1,185 +1,134 @@
 
 {
-  "name": "AWAIS-MD",
-  "description": "ᴊᴀᴠᴀsᴄʀɪᴘᴛ ᴡʜᴀᴛsᴀᴘᴘ ʙᴏᴛ ᴄʀᴇᴀᴛᴇᴅ ʙʏ ᴀᴡᴀɪs ᴍᴅ",
-  "logo": "https://github.com/Awais-star-a11y/TESTING-REPO/raw/refs/heads/main/IMG-20250409-WA0093.jpg",
-  "keywords": ["bot"],
-  "success_url": "/",
-
-    "stack": "container",
-  "env": {
-    "SESSION_ID": {
-      "description": "Put the session-id here.",
-      "required": true,
-      "value": ""
-    },  
-    
-    "ALIVE_IMG": {
-      "description": "paste your image url if you don't have you can use this public url.",
-      "required": true,
-      "value": "https://github.com/Awais-star-a11y/TESTING-REPO/raw/refs/heads/main/IMG-20250409-WA0093.jpg"
-    }, 
-    
-    "OWNER_NUMBER": {
-      "description": "BOT OWNER NUMBER",
-      "required": false,
-      "value": "9231828"
-    },
-    
-    "OWNER_NAME": {
-      "description": "BOT OWNER NAME",
-      "required": false,
-      "value": "AWAISXD"
-    }, 
-    
-    "ALIVE_MSG": {
-      "description": "paste your alive message hear.",
-      "required": true,
-      "value": "•°- ß Ə ʌ υ ʈ ı ƒ υ ɭ - °•🩷🌸🤤.!!"
-    },
-    
-    "HEART_REACT": {
-      "description": "Make it true if you want bot only heart ♥️ emjois reaction .",
-      "required": true,
-      "value": "false"
-    }, 
-    "PREFIX": {
-      "description": "paste your bot prefix note! Don't apply null prefix.",
-      "required": true,
-      "value": "."
-    },
-    
-    "MODE": {
-      "description": "select your bot work type public-private-inbox-group.",
-      "required": true,
-      "value": "public"
-    }, 
-
-    "AUTO_VOICE": {
-      "description": "Make it true if you want bot auto voice.",
-      "required": true,
-      "value": "true"
-    }, 
-
-    "AUTO_REPLY": {
-      "description": "Make it true if you want bot auto reply.",
-      "required": true,
-      "value": "true"
-    }, 
-
-    "AUTO_TYPING": {
-      "description": "Make it true if you want auto typing.",
-      "required": false,
-      "value": "true"
-    },
-
-    "AUTO_STICKER": {
-      "description": "Make it true if you want bot auto sticker.",
-      "required": true,
-      "value": "true"
-    }, 
-
-    "AUTO_READ_STATUS": {
-      "description": "Make it true if you want bot auto auto_read_status.",
-      "required": true,
-      "value": "true"
-    }, 
-
-    "ANTI_LINK": {
-      "description": "Make it true if you want bot auto remove group link.",
-      "required": true,
-      "value": "true"
-    },
-
-    "ANTI_BAD": {
-      "description": "Make it true if you want bot auto delete bad words from group example xxx porn etc.",
-      "required": true,
-      "value": "true"
-    }, 
-
-   "CURRENT_STATUS": {
-      "description": "Make it true if want automatic voice reply .",
-      "required": false,
-      "value": "false"
-    }, 
-
-    "FAKE_RECORDING": {
-      "description": "Make it true if you want bot fake record.",
-      "required": true,
-      "value": "false"
-    },
-
-    "AUTO_REACT": {
-      "description": "Make it true if you want bot AutoReact.",
-      "required": true,
-      "value": "true"
-    },
-
-    "OWNER_REACT": {
-      "description": "Make it true if you want bot OwnerReact.",
-      "required": true,
-      "value": "true"
-    
-    }, 
-
-   "ALWAYS_ONLINE": {
-      "description": "Make it true if want automatic voice reply .",
-      "required": false,
-      "value": "true"
-    }, 
-
-  "AUTO_STATUS_REPLY": {
-      "description": "Make it true if want automatic status reply .",
-      "required": false,
-      "value": "true"
-    },    
-
-    "BOT_NAME": {
-      "description": "write hear your name.",
-      "required": true,
-      "value": "ᴀᴡᴀɪs ᴍᴅ"
-    }, 
-
-      "READ_MESSAGE": {
-      "description": "Make it true if you want bot read your all sms just now.",
-      "required": true,
-      "value": "false"
-    }, 
-    "CAPTION": {
-      "description": "enter your caption if you want to show on menu.",
-      "required": true,
-      "value": "*ᴘᴏᴡᴅᴇʀᴇᴅ ʙʏ ᴀᴡᴀɪs ᴍᴅ*"
-    }, 
-    "AUTO_STATUS__MSG": {
-      "description": "enter your caption if you want to show on status reply.",
-      "required": true,
-      "value": "𝒚𝒐𝒖𝒓 𝒔𝒕𝒂𝒕𝒖𝒔 𝒔𝒆𝒆𝒏 𝒋𝒖𝒔𝒕 𝒏𝒐𝒘 𝒃𝒚 𝒂𝒘𝒂𝒊𝒔 𝒎𝒅"
-    },    
-
-      "AUTHOR": {
-      "description": "stickerpack author name",
-      "required": true,
-      "value": "AWAIS MD"
-    },
-
-    "PACKNAME": {
-      "description": "stickerpack pack name",
-      "required": true,
-      "value": "created by"
-    },
-
-    "ANTI_DEL_PATH": {
-      "description": "set 'same' if you want anti deleted message on same chat where it was deleted.",
-      "required": true,
-      "value": "log"
-    }
-
-
-},
-
-     "buildpacks": [
-        {
-            "url": "https://github.com/heroku/heroku-buildpack-nodejs.git"
-        }
-     ]
+  "name": "AWAIS-MD-V3",
+  "version": "1.0.3",
+  "description": "A WhatsApp bot created by Awais using Node.js",
+  "main": "start.js",
+  "scripts": {
+    "start": "pm2 start start.js --deep-monitoring --attach --name AWAIS-MD-V3",
+    "stop": "pm2 stop AWAIS-MD-V3",
+    "restart": "pm2 restart AWAIS-MD-V3"
+  },
+  "engines": {
+    "node": ">=22.16.0",
+    "npm": ">=11.4.1"
+  },
+  "dependencies": {
+    "@adiwajshing/keyed-db": "^0.2.4",
+    "@black-king/temp-mail-gen": "1.0.1",
+    "@blackamda/song_video_dl": "1.1.0",
+    "@blackamda/telegram-image-url": "^1.0.0",
+    "@bochilteam/scraper": "4.2.4",
+    "@bochilteam/scraper-sosmed": "1.0.5",
+    "@danitech/scraper": "1.0.7",
+    "@dark-yasiya/scrap": "1.0.1",
+    "@dark-yasiya/yt-dl.js": "latest",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@google/generative-ai": "0.17.1",
+    "@mrnima/facebook-downloader": "1.0.0",
+    "@mrnima/tiktok-downloader": "1.0.0",
+    "@saipulanuar/scraper": "3.0.0",
+    "@sl-code-lords/esana-news": "1.0.3",
+    "@sl-code-lords/image-library": "1.0.0",
+    "@sl-code-lords/movie-dl": "1.1.0",
+    "@sl-code-lords/photooxy": "1.0.1",
+    "@sl-code-lords/si-subdl": "1.1.1",
+    "@sl-code-lords/wabetainfo": "1.2.0",
+    "@tobyg74/tiktok-api-dl": "1.0.13",
+    "@vitalets/google-translate-api": "9.2.1",
+    "@whiskeysockets/baileys": "^6.7.1",
+    "adm-zip": "^0.5.16",
+    "api-dylux": "latest",
+    "aptoide-scraper": "1.0.1",
+    "awesome-phonenumber": "7.5.0",
+    "axios": "^1.9.0",
+    "bard-ai": "2.0.3",
+    "betabotz-tools": "0.0.7",
+    "bing-translate-api": "4.0.2",
+    "btch-downloader": "2.3.1-alpha",
+    "buffer": "6.0.3",
+    "buffer-url": "1.0.0",
+    "cc-suite": "1.0.5",
+    "chart.js": "^4.4.9",
+    "chatgpt-scraper": "^1.0.1",
+    "cheerio": "^1.0.0-rc.12",
+    "crypto-digest-sync": "^1.0.0",
+    "crypto-js": "latest",
+    "dandi-api": "1.2.0",
+    "dark-yasiya-sinhalasub.lk": "1.0.1",
+    "emoji-api": "3.0.1",
+    "emoji-mixer": "1.0.33",
+    "express": "latest",
+    "extract-zip": "2.0.1",
+    "fb-info-video": "1.0.2",
+    "ffmpeg": "^0.0.4",
+    "file_size_url": "^1.0.4",
+    "file-type": "^16.5.3",
+    "fluent-ffmpeg": "^2.1.2",
+    "form-data": "^4.0.0",
+    "fouadwa-scraper": "2.0.0",
+    "fraction.js": "^4.3.7",
+    "fs-extra": "^11.1.0",
+    "g4f": "1.4.6",
+    "gemini-ai": "latest",
+    "getscreenshot.js": "1.0.0",
+    "gms-mobile-news": "1.0.0",
+    "google-image-sr": "^1.0.0",
+    "google-it": "^1.6.4",
+    "google-tts-api": "^2.0.2",
+    "human-readable": "0.2.1",
+    "imaginesdk": "latest",
+    "imgur": "latest",
+    "is-standard-emoji": "1.0.0",
+    "jimp": "0.16.1",
+    "jspdf": "^2.5.1",
+    "lodash": "^4.17.21",
+    "mathjs": "^12.0.0",
+    "mathsteps": "^0.2.0",
+    "megajs": "^1.3.7",
+    "mfiredlcore-vihangayt": "^1.0.0",
+    "mime-types": "2.1.35",
+    "moment-timezone": "^0.5.43",
+    "mrnima-moviedl": "1.0.0",
+    "nima-wabeta-info": "1.0.5",
+    "node-cache": "5.1.2",
+    "node-fetch": "^2.6.1",
+    "pastebin-js": "latest",
+    "path": "^0.12.7",
+    "pino": "^9.5.0",
+    "pm2": "^6.0.5",
+    "PRABATH-MD": "file:",
+    "qr-image": "3.2.0",
+    "qrcode": "1.5.3",
+    "qrcode-terminal": "^0.12.0",
+    "qs": "^6.10.1",
+    "remove-bg-node": "1.0.3",
+    "ruhend-scraper": "9.0.1",
+    "Sachibot-Spotifydl": "git+https://github.com/AlenVelocity/spotifydl-core.git",
+    "scr-emoji": "0.0.3",
+    "seedr": "^1.1.2",
+    "sequelize": "^6.37.5",
+    "simple-git": "3.22.0",
+    "sinhala-cricket-newsjs": "1.0.0",
+    "sinhala-unicode": "2.0.0",
+    "sqlite3": "^5.1.7",
+    "tesseract.js": "2.0.1",
+    "tiktokdl": "0.0.4",
+    "translatte": "^3.0.1",
+    "turndown": "7.1.3",
+    "unzipper": "0.12.2",
+    "util": "^0.12.5",
+    "vihangayt-fbdl": "1.0.2",
+    "vm": "^0.1.0",
+    "wa_set_pkg": "1.0.5",
+    "wa-sticker-formatter": "^4.4.4",
+    "webtorrent": "2.5.1",
+    "xvideos-scraper": "1.0.4",
+    "youtubedl-core": "4.11.7",
+    "yt-search": "2.13.1",
+    "ytdl-mp3": "3.4.0",
+    "ytdl-secktor": "latest",
+    "ytmp3-scrap": "1.0.0",
+    "ytsearch-venom": "1.0.0"
+  }
 }
