--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A WhatsApp bot created by Awais using Node.js",
   "main": "start.js",
   "scripts": {
-    "start": "pm2 start start.js --deep-monitoring --attach --name AWAIS-MD-V3",
+    "start": "pm2 start start.js --deep-monitoring --attach --name AWAIS-MD",
     "stop": "pm2 stop AWAIS-MD-V3",
-    "restart": "pm2 restart AWAIS-MD-V3"
+    "restart": "pm2 restart AWAIS-MD"
   },
   "engines": {
     "node": ">=22.16.0",
@@ -35,7 +35,7 @@
     "@sl-code-lords/wabetainfo": "1.2.0",
     "@tobyg74/tiktok-api-dl": "1.0.13",
     "@vitalets/google-translate-api": "9.2.1",
-    "@whiskeysockets/baileys": "^6.7.1",
+    "@whiskeysockets/baileys": "^6.7.18",
     "adm-zip": "^0.5.16",
     "api-dylux": "latest",
     "aptoide-scraper": "1.0.1",
